--- a/bootstrap-4.5.0-dist - Copy/mod3_solution.html
+++ b/bootstrap-4.5.0-dist - Copy/mod3_solution.html
@@ -193,23 +193,23 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="color: white">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="#"><span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="#"></a>
-      <a class="nav-item nav-link" href="#"></a>
+      <a class="nav-item nav-link active" href="#">chicken<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">beef</a>
+      <a class="nav-item nav-link" href="#">sushi</a>
       <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
     </div>
   </div>
 </nav>
-  <h1 style="text-align: center;">Different Laptops</h1>
+  <h1 style="text-align: center;">Our Menu</h1>
     </header>
   <div class="row">
     <section class="col-lg-4 col-mg-6 col-slg-12">
-      <div class="container"><h2>ASUS</h2></div>
+      <div class="container"><h2>Chicken</h2></div>
       <p>Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur</p></section>
    <section class="col-lg-4 col-mg-6 col-slg-12">
-      <div class="container"><h2>DELL</h2></div><p>Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur</p></section>
+      <div class="container"><h2>Beef</h2></div><p>Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur</p></section>
       <section class="col-lg-4 col-mg-6 col-slg-12">
-      <div class="container"><h2>ACER</h2></div><p>Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur</p></section>
+      <div class="container"><h2>Sushi</h2></div><p>Expedita soluta, dignissimos voluptatum esse deserunt blanditiis. Laudantium quod dignissimos sed consequuntur quis minima a quibusdam. Velit natus porro soluta, id reprehenderit quia atque, voluptas, cum consectetur</p></section>
   
 
 </body>
